crates/lowering/tests/snapshots/concrete__lower_expression_name.snap
---
source: crates/lowering/tests/concrete.rs
expression: "&lower.source_map"
snapshot_kind: text
---
SourceMap {
    types: {},
    binders: {},
    expressions: {
        AstPtr {
            raw: SyntaxNodePtr {
                kind: ExpressionConstructor,
                range: 23..28,
            },
        }: Constructor {
            qualifier: Some(
                "F.",
            ),
            name: Some(
                "Id",
            ),
        },
        AstPtr {
            raw: SyntaxNodePtr {
                kind: ExpressionVariable,
                range: 28..33,
            },
        }: Variable {
            qualifier: Some(
                "F.",
            ),
            name: Some(
                "id",
            ),
        },
        AstPtr {
            raw: SyntaxNodePtr {
                kind: ExpressionOperatorName,
                range: 33..39,
            },
        }: OperatorName {
            qualifier: Some(
                "F.",
            ),
            name: Some(
                "(+)",
            ),
        },
        AstPtr {
            raw: SyntaxNodePtr {
                kind: ExpressionApplicationChain,
                range: 23..39,
            },
        }: ApplicationChain {
            head: Some(
                Id<syntax::cst::Expression>(0),
            ),
            tail: [
                Expression(
                    Some(
                        Id<syntax::cst::Expression>(1),
                    ),
                ),
                Expression(
                    Some(
                        Id<syntax::cst::Expression>(2),
                    ),
                ),
            ],
        },
    },
    let_bindings: {},
    let_bindings_grouped: [],
}
