crates/lowering/tests/snapshots/concrete__lower_expression_parenthesized.snap
---
source: crates/lowering/tests/concrete.rs
expression: "&lower.source_map"
snapshot_kind: text
---
SourceMap {
    types: {},
    binders: {},
    expressions: {
        AstPtr {
            raw: SyntaxNodePtr {
                kind: ExpressionInteger,
                range: 25..26,
            },
        }: Integer,
        AstPtr {
            raw: SyntaxNodePtr {
                kind: ExpressionInteger,
                range: 28..30,
            },
        }: Integer,
        AstPtr {
            raw: SyntaxNodePtr {
                kind: ExpressionOperatorChain,
                range: 25..30,
            },
        }: OperatorChain {
            head: Some(
                Id<syntax::cst::Expression>(0),
            ),
            tail: [
                OperatorPair {
                    qualifier: None,
                    operator: Some(
                        "+",
                    ),
                    element: Some(
                        Id<syntax::cst::Expression>(1),
                    ),
                },
            ],
        },
        AstPtr {
            raw: SyntaxNodePtr {
                kind: ExpressionParenthesized,
                range: 23..31,
            },
        }: Parenthesized {
            expression: Some(
                Id<syntax::cst::Expression>(2),
            ),
        },
    },
    let_bindings: {},
    let_bindings_grouped: [],
}
