crates/lowering/tests/snapshots/concrete__lower_expression_record.snap
---
source: crates/lowering/tests/concrete.rs
expression: "&lower.source_map"
snapshot_kind: text
---
SourceMap {
    types: {},
    binders: {},
    expressions: {
        AstPtr {
            raw: SyntaxNodePtr {
                kind: ExpressionInteger,
                range: 28..30,
            },
        }: Integer,
        AstPtr {
            raw: SyntaxNodePtr {
                kind: ExpressionRecord,
                range: 23..35,
            },
        }: Record {
            items: [
                Field {
                    name: Some(
                        "a",
                    ),
                    expression: Some(
                        Id<syntax::cst::Expression>(0),
                    ),
                },
                Pun {
                    name: Some(
                        "b",
                    ),
                },
            ],
        },
    },
    let_bindings: {},
    let_bindings_grouped: [],
}
