crates/lowering/tests/snapshots/concrete__lower_foreign_value.snap
---
source: crates/lowering/tests/concrete.rs
expression: "&lower.lowering_map"
snapshot_kind: text
---
LoweringMap {
    expr_item: {
        Id<indexing::indexes::ExprItem>(0): Foreign {
            signature: Some(
                Id<syntax::cst::Type>(2),
            ),
        },
    },
}
